--- a/13.04.2023 Animations_Transitions_Transform/transform/transform3_1/assets/style.css
+++ b/13.04.2023 Animations_Transitions_Transform/transform/transform3_1/assets/style.css
@@ -1,52 +1,50 @@
 .box{
     background-color: rgb(58, 56, 56);
     width: 300px;
-    height: 400px;
+    height: 300px;
     margin: 40px;
-    padding: 20px 50px;
+    padding: 50px;
+    perspective: 1000px;
+}
+
+.box div{
+    border-radius: 10px;
+    padding:  1px 10px;
+    margin: -10px;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    transform: rotateY(-20deg);
+    position: relative;
 }
 
 .eins{
     background-color: rgba(173, 216, 230, 0.706);
-    border-radius: 10px;
-    padding:  1px 10px;
-    margin: -5px;
-    transform: skew(-10deg) rotateY(-20deg);
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 .zwei{
     background-color: rgba(250, 250, 210, 0.718);
-    border-radius: 10px;
-    padding:  1px 10px;
-    margin: -5px;
-    transform: skew(-10deg) rotateY(-20deg);
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 .drei{
     background-color: rgba(255, 182, 193, 0.671);
-    border-radius: 10px;
-    padding:  1px 10px;
-    margin: -5px;
-    transform: skew(-10deg) rotateY(-20deg);
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 .eins:hover{
     background-color: rgb(173, 216, 230);
-    transform: skew(-5deg) rotate(0deg);
+    transform: rotateY(-10deg);
     transition: all 0.4s ease-in;
+    z-index: 1;
 }
 
 .zwei:hover{
     background-color: rgb(250, 250, 210);
-    transform: skew(-5deg) rotate(0deg);
+    transform: rotateY(-10deg);
     transition: all 0.4s ease-in;
+    z-index: 1;
 }
 
 .drei:hover{
     background-color: rgb(255, 182, 193);
-    transform: skew(-5deg) rotate(0deg);
+    transform: rotateY(-10deg);
     transition: all 0.4s ease-in;
+    z-index: 1;
 }
