--- a/13.04.2023 Animations_Transitions_Transform/transition/Transition_Lev2_1/assets/style.css
+++ b/13.04.2023 Animations_Transitions_Transform/transition/Transition_Lev2_1/assets/style.css
@@ -9,9 +9,6 @@
 
 .container{
     position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 320px;
     height: 400px;
 }
@@ -21,21 +18,19 @@
 }
 
 .overlay{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
     background-color: rgba(0, 0, 0, 0.696);
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+
+    position: absolute;
+    bottom: 0;
+    
     overflow: hidden;
     height: 0;
-    transition: 1s ease;
-}
+    transition: 1s;
 
-.text{
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
